Revert "Update branch (#2)"
This reverts commit dacde336a7911379ed451c56e5489db0cde8b2e5.